[gd_scene load_steps=7 format=2]

[ext_resource path="res://Backgrounds/bg_high.png" type="Texture" id=1]
[ext_resource path="res://Fonts/UI_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://views/scripts/post_game.gd" type="Script" id=3]
[ext_resource path="res://views/scripts/difficulty_progress.gd" type="Script" id=4]
[ext_resource path="res://UI/difficulty_bg.png" type="Texture" id=5]
[ext_resource path="res://UI/difficulty_fg.png" type="Texture" id=6]

[node name="PostGame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( -1069.85, -23.6381 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameInfo" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.235
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -302.0
margin_right = 302.0
custom_constants/separation = 20
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoundPoints" type="Label" parent="Panel/GameInfo"]
margin_top = 99.0
margin_right = 604.0
margin_bottom = 139.0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Punkte erreicht"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Answers" type="Label" parent="Panel/GameInfo"]
margin_top = 159.0
margin_right = 604.0
margin_bottom = 199.0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Fragen richtig"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndPoints" type="Label" parent="Panel/GameInfo"]
margin_top = 219.0
margin_right = 604.0
margin_bottom = 259.0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Neuer Punktestand"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewDifficulty" type="HBoxContainer" parent="Panel/GameInfo"]
margin_top = 279.0
margin_right = 604.0
margin_bottom = 339.0
custom_constants/separation = 30

[node name="Text" type="Label" parent="Panel/GameInfo/NewDifficulty"]
margin_top = 10.0
margin_right = 173.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Neue Stufe"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DifficultyProgress" type="TextureProgress" parent="Panel/GameInfo/NewDifficulty"]
margin_left = 203.0
margin_right = 561.0
margin_bottom = 60.0
max_value = 10.0
step = 0.0
texture_under = ExtResource( 5 )
texture_progress = ExtResource( 6 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.875
anchor_right = 0.5
anchor_bottom = 0.875
margin_left = -262.0
margin_top = -321.0
margin_right = 263.0
margin_bottom = -1.00012
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnalysisButton" type="VBoxContainer" parent="Panel/Buttons"]
margin_right = 525.0
margin_bottom = 108.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/Buttons/AnalysisButton"]
margin_right = 525.0
margin_bottom = 2.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Analysis" type="Button" parent="Panel/Buttons/AnalysisButton"]
margin_top = 6.0
margin_right = 525.0
margin_bottom = 102.0
rect_min_size = Vector2( 525, 96 )
focus_mode = 0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_colors/font_color_pressed = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Antworten ansehen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel/Buttons/AnalysisButton"]
margin_top = 106.0
margin_right = 525.0
margin_bottom = 108.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="VBoxContainer" parent="Panel/Buttons"]
margin_top = 112.0
margin_right = 525.0
margin_bottom = 214.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="Panel/Buttons/ContinueButton"]
margin_right = 525.0
margin_bottom = 96.0
rect_min_size = Vector2( 525, 96 )
focus_mode = 0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_colors/font_color_pressed = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Weiterspielen"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Panel/Buttons/ContinueButton"]
margin_top = 100.0
margin_right = 525.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenuButton" type="VBoxContainer" parent="Panel/Buttons"]
margin_top = 218.0
margin_right = 525.0
margin_bottom = 320.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" type="Button" parent="Panel/Buttons/MainMenuButton"]
margin_right = 525.0
margin_bottom = 96.0
rect_min_size = Vector2( 525, 96 )
focus_mode = 0
custom_colors/font_color = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_colors/font_color_hover = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_colors/font_color_pressed = Color( 0.160784, 0.447059, 0.419608, 1 )
custom_fonts/font = ExtResource( 2 )
enabled_focus_mode = 0
text = "Hauptmen√º"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Panel/Buttons/MainMenuButton"]
margin_top = 100.0
margin_right = 525.0
margin_bottom = 102.0
rect_min_size = Vector2( 0, 2 )
color = Color( 0.160784, 0.447059, 0.419608, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseBlocker" type="ColorRect" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="Panel/Buttons/AnalysisButton/Analysis" to="." method="_on_Analysis_button_up"]
[connection signal="button_up" from="Panel/Buttons/ContinueButton/Continue" to="." method="_on_Continue_button_up"]
[connection signal="button_up" from="Panel/Buttons/MainMenuButton/MainMenu" to="." method="_on_MainMenu_button_up"]
